@@ -144,6 +144,8 @@ static __driver_0 struct driver_d ixp42x_serial_driver = {
   .name = "serial-ixp42x",
   .description = "ixp42x serial driver",
   .flags = DRIVER_SERIAL | DRIVER_CONSOLE,
+  .open = open_helper,          /* Always succeed */
+  .close = close_helper,
   .read = ixp42x_serial_read,
   .write = ixp42x_serial_write,
   .poll = ixp42x_serial_poll,
