@@ -183,6 +183,8 @@ static __driver_0 struct driver_d lh7952x_serial_driver = {
   .name = "serial-lh7952x",
   .description = "lh7952x serial driver",
   .flags = DRIVER_SERIAL | DRIVER_CONSOLE,
+  .open = open_helper,          /* Always succeed */
+  .close = close_helper,
   .read = lh7952x_serial_read,
   .write = lh7952x_serial_write,
   .poll = lh7952x_serial_poll,
