@@ -112,6 +112,8 @@ static __driver_0 struct driver_d lh7a40x_serial_driver = {
   .name = "serial-lh7a40x",
   .description = "lh7a40x serial driver",
   .flags = DRIVER_SERIAL | DRIVER_CONSOLE,
+  .open = open_helper,          /* Always succeed */
+  .close = close_helper,
   .read = lh7a40x_serial_read,
   .write = lh7a40x_serial_write,
   .poll = lh7a40x_serial_poll,
