@@ -106,6 +106,8 @@ static __driver_0 struct driver_d mx31_serial_driver = {
   .name = "serial-mx31",
   .description = "mx31 serial driver",
   .flags = DRIVER_SERIAL | DRIVER_CONSOLE,
+  .open = open_helper,          /* Always succeed */
+  .close = close_helper,
   .read = mx31_serial_read,
   .write = mx31_serial_write,
   .poll = mx31_serial_poll,
