@@ -109,6 +109,8 @@ static __driver_0 struct driver_d sc16c652_serial_driver = {
   .name = "serial-sc16c652",
   .description = "sc16c652 serial driver",
   .flags = DRIVER_SERIAL | DRIVER_CONSOLE,
+  .open = open_helper,          /* Always succeed */
+  .close = close_helper,
   .read = sc16c652_serial_read,
   .write = sc16c652_serial_write,
   .poll = sc16c652_serial_poll,
