@@ -99,6 +99,8 @@ static __driver_0 struct driver_d orion5x_serial_driver = {
   .name  = "serial-orion5x",
   .description = "orion5x serial driver",
   .flags = DRIVER_SERIAL | DRIVER_CONSOLE,
+  .open = open_helper,          /* Always succeed */
+  .close = close_helper,
   .read  = orion5x_serial_read,
   .write = orion5x_serial_write,
   .poll  = orion5x_serial_poll,
