@@ -108,6 +108,8 @@ static __driver_0 struct driver_d s3c2410_serial_driver = {
 	.name = "serial-s3c2410",
 	.description = "s3c2410 serial driver",
 	.flags = DRIVER_SERIAL | DRIVER_CONSOLE,
+        .open = open_helper,          /* Always succeed */
+        .close = close_helper,
 	.read = s3c2410_serial_read,
 	.write = s3c2410_serial_write,
 	.poll = s3c2410_serial_poll,
